pokeplatinum_c = files(
    'coins.c',
    'enc_effects.c',
    'error_handling.c',
    'error_message_reset.c',
    'game_overlay.c',
    'game_version.c',
    'gx_layers.c',
    'heap.c',
    'item.c',
    'main.c',
    'map_header.c',
    'move_table.c',
    'narc.c',
    'party.c',
    'poffin.c',
    'strbuf.c',
    'list_menu.c',
    'menu.c',
    'charcode_util.c',
    'render_text.c',
    'font.c',
    'palette.c',
    'sound_system.c',
    'sound.c',
    'sound_playback.c',
    'sound_chatot.c',
    'unk_0200679C.c',
    'overlay_manager.c',
    'graphics.c',
    'pokemon_sprite.c',
    'sprite_util.c',
    'sprite_resource.c',
    'sprite_transfer.c',
    'render_oam.c',
    'brightness_controller.c',
    'message.c',
    'message_util.c',
    'string_template.c',
    'font_special_chars.c',
    'sprite_system.c',
    'sys_task.c',
    'render_window.c',
    'screen_fade.c',
    'screen_fade_funcs.c',
    'hardware_window.c',
    'unk_02012744.c',
    'character_sprite.c',
    'rtc.c',
    'string_list.c',
    'screen_scroll_manager.c',
    'particle_system.c',
    'colored_arrow.c',
    'unk_02014A84.c',
    'unk_02014D38.c',
    'software_sprite.c',
    'unk_0201567C.c',
    'unk_020158A8.c',
    'unk_02015920.c',
    'unk_02015F84.c',
    'unk_02017038.c',
    'easy3d_object.c',
    'play_time_manager.c',
    'unk_02017498.c',
    'system.c',
    'bg_window.c',
    'easy3d.c',
    'sys_task_manager.c',
    'gfx_box_test.c',
    'charcode.c',
    'math_util.c',
    'text.c',
    'vram_transfer.c',
    'cell_transfer.c',
    'unk_0201DD00.c',
    'grid_menu_cursor_position.c',
    'ascii_util.c',
    'fx_util.c',
    'int_distance.c',
    'touch_pad.c',
    'char_transfer.c',
    'pltt_transfer.c',
    'camera.c',
    'unk_02020AEC.c',
    'sprite.c',
    'touch_screen.c',
    'timer.c',
    'resource_collection.c',
    'render_view.c',
    'font_manager.c',
    'touch_screen_actions.c',
    'unk_0202414C.c',
    'unk_0202419C.c',
    'hardware_palette.c',
    'g3d_pipeline.c',
    'boot.c',
    'savedata/save_table.c',
    'savedata.c',
    'system_data.c',
    'save_player.c',
    'trainer_info.c',
    'battle_regulation.c',
    'daycare_save.c',
    'pokedex.c',
    'savedata_misc.c',
    'game_options.c',
    'berry_patches.c',
    'persisted_map_features.c',
    'pal_pad.c',
    'mail.c',
    'unk_0202854C.c',
    'unk_020298BC.c',
    'unk_0202ACE0.c',
    'record_mixed_rng.c',
    'journal.c',
    'trainer_card_save_data.c',
    'unk_0202C858.c',
    'unk_0202C9F4.c',
    'play_time.c',
    'unk_0202CC64.c',
    'game_records.c',
    'unk_0202D05C.c',
    'unk_0202D778.c',
    'special_encounter.c',
    'global_trade.c',
    'mystery_gift.c',
    'hall_of_fame_entries.c',
    'unk_0202E2CC.c',
    'unk_0202E840.c',
    'unk_0202EEC0.c',
    'unk_0202F108.c',
    'unk_0202F180.c',
    'unk_0202F1D4.c',
    'unk_0202FF4C.c',
    'unk_02030108.c',
    'unk_020302D0.c',
    'unk_02030494.c',
    'unk_0203061C.c',
    'unk_02030880.c',
    'unk_02030A80.c',
    'unk_02030CE8.c',
    'unk_02030EA4.c',
    'unk_02030EE0.c',
    'comm_ring.c',
    'unk_020322D8.c',
    'unk_0203266C.c',
    'unk_02032798.c',
    'communication_information.c',
    'unk_02033200.c',
    'communication_system.c',
    'unk_020363E8.c',
    'unk_020366A0.c',
    'unk_02038ED4.c',
    'unk_02038F8C.c',
    'unk_02038FFC.c',
    'unk_0203909C.c',
    'unk_020393C8.c',
    'unk_02039814.c',
    'unk_02039A58.c',
    'unk_02039A64.c',
    'map_matrix.c',
    'map_header_data.c',
    'field_overworld_state.c',
    'unk_0203A7D8.c',
    'field_overworld_weather.c',
    'start_menu.c',
    'unk_0203C954.c',
    'field_system.c',
    'location.c',
    'unk_0203D1B8.c',
    'field_script_context.c',
    'script_manager.c',
    'scrcmd.c',
    'scrcmd_shop.c',
    'unk_02046C7C.c',
    'scrcmd_strings.c',
    'scrcmd_jubilife_lottery.c',
    'scrcmd_sound.c',
    'scrcmd_trainer.c',
    'unk_02048BD0.c',
    'scrcmd_tv_broadcast.c',
    'unk_020494DC.c',
    'unk_02049D08.c',
    'unk_0204AEE8.c',
    'scrcmd_berry.c',
    'scrcmd_mystery_gift.c',
    'scrcmd_catching_show.c',
    'scrcmd_coins.c',
    'scrcmd_money.c',
    'scrcmd_daycare.c',
    'scrcmd_amity_square.c',
    'scrcmd_party.c',
    'scrcmd_fossil.c',
    'scrcmd_game_corner_prize.c',
    'scrcmd_system_flags.c',
    'scrcmd_item.c',
    'scrcmd_underground_inventory.c',
    'scrcmd_party_mon_moves.c',
    'scrcmd_dummy_23F_242.c',
    'unk_0204F04C.c',
    'unk_0204F13C.c',
    'unk_0204FA34.c',
    'unk_0204FAB4.c',
    'unk_0205001C.c',
    'unk_0205003C.c',
    'unk_02050548.c',
    'unk_02050568.c',
    'vars_flags.c',
    'field_task.c',
    'encounter.c',
    'field_battle_data_transfer.c',
    'unk_020528D0.c',
    'unk_02052C6C.c',
    'field_map_change.c',
    'unk_02054884.c',
    'terrain_attributes.c',
    'terrain_collision_manager.c',
    'unk_020553DC.c',
    'overworld_map_history.c',
    'field_transition.c',
    'unk_020559DC.c',
    'berry_patch_manager.c',
    'catching_show.c',
    'poketch.c',
    'unk_02056B30.c',
    'unk_020573FC.c',
    'unk_0205749C.c',
    'comm_player_manager.c',
    'field_comm_manager.c',
    'unk_0205A0D8.c',
    'unk_0205B33C.c',
    'unk_0205C22C.c',
    'unk_0205C980.c',
    'unk_0205CA94.c',
    'field_message.c',
    'map_tile_behavior.c',
    'unk_0205DFC4.c',
    'player_avatar.c',
    'unk_0205F180.c',
    'map_object.c',
    'map_object_move.c',
    'unk_0206450C.c',
    'unk_020655F4.c',
    'unk_020673B8.c',
    'berry_patch_graphics.c',
    'unk_02067A84.c',
    'dynamic_map_features.c',
    'item_use_functions.c',
    'pokeradar.c',
    'unk_02069BE0.c',
    'scroll_prompts.c',
    'system_flags.c',
    'system_vars.c',
    'applications/town_map/context.c',
    'unk_0206B9D8.c',
    'great_marsh_lookout.c',
    'trainer_card_badge_dirt.c',
    'roaming_pokemon.c',
    'unk_0206C660.c',
    'cutscenes/boat_cutscene/boat_cutscene.c',
    'tv_episode_segment.c',
    'unk_0206F314.c',
    'unk_02070428.c',
    'unk_0207064C.c',
    'field_move_tasks.c',
    'unk_020711C8.c',
    'overworld_anim_manager.c',
    'platform_lift.c',
    'persisted_map_features_init.c',
    'map_header_util.c',
    'trainer_card.c',
    'unk_020722AC.c',
    'unk_02073700.c',
    'simple3d.c',
    'pokemon.c',
    'trainer_data.c',
    'pc_boxes.c',
    'pokemon_icon.c',
    'dexmode_checker.c',
    'height_weight_data.c',
    'battle_regulation_validation.c',
    'unk_0207A6DC.c',
    'evolution.c',
    'unk_0207C63C.c',
    'type_icon.c',
    'bag_context.c',
    'bag.c',
    'unk_0207DA28.c',
    'unk_0207DFAC.c',
    'unk_0207E060.c',
    'applications/party_menu/main.c',
    'applications/party_menu/windows.c',
    'applications/party_menu/sprites.c',
    'applications/party_menu/unk_02083370.c',
    'applications/party_menu/unk_02084B70.c',
    'applications/naming_screen.c',
    'unk_020890F4.c',
    'unk_02089604.c',
    'unk_0208A3F4.c',
    'unk_0208B284.c',
    'unk_0208BA78.c',
    'unk_0208BEBC.c',
    'unk_0208C010.c',
    'unk_0208C098.c',
    'applications/pokemon_summary_screen/main.c',
    'applications/pokemon_summary_screen/sprites.c',
    'applications/pokemon_summary_screen/window.c',
    'applications/pokemon_summary_screen/3d_anim.c',
    'applications/pokemon_summary_screen/subscreen.c',
    'ribbon.c',
    'unk_02092494.c',
    'unk_020933F8.c',
    'unk_02094EDC.c',
    'unk_02095AF0.c',
    'unk_02095CD4.c',
    'unk_02095E98.c',
    'unk_020961E8.c',
    'item_use_pokemon.c',
    'unk_020972FC.c',
    'berry_data.c',
    'unk_0209747C.c',
    'unk_02097624.c',
    'unk_02097B18.c',
    'unk_02098218.c',
    'unk_020985E4.c',
    'pokedex_language.c',
    'pokedex_heightweight.c',
    'pokedex_data_index.c',
    'unk_020989DC.c',
    'unk_02098FFC.c',
    'unk_02099500.c',
    'unk_02099550.c',
    'unk_02099604.c',
    'unk_020996D0.c',
    'move_reminder_data.c',
    'unk_020998EC.c',
    'poketch_memory.c',
    'unk_02099DFC.c',
    'unk_0209A2C4.c',
    'unk_0209A74C.c',
    'unk_0209AA74.c',
    'shop_misc.c',
    'pokedex_memory.c',
    'unk_0209ACF4.c',
    'unk_0209B344.c',
    'unk_0209B6F8.c',
    'unk_0209BA18.c',
    'unk_0209BA80.c',
    'unk_0209BDF8.c',
    'unk_0209C194.c',
    'unk_0209C370.c',
    'unk_0209C390.c',
    'unk_020EDBAC.c',
    'rowan_intro_app_template.c',
    'overlay000/ov0_dummy.c',
    'overlay001/ov1_021D0D80.c',
    'overlay002/ov2_dummy.c',
    'overlay003/ov3_dummy.c',
    'overlay004/ov4_021D0D80.c',
    'overlay004/ov4_021D2808.c',
    'overlay005/fieldmap.c',
    'overlay005/ov5_021D1A94.c',
    'overlay005/field_control.c',
    'overlay005/sprite_resource_manager.c',
    'overlay005/map_prop_animation.c',
    'overlay005/ov5_021D431C.c',
    'overlay005/area_light.c',
    'overlay005/map_prop_material_shape.c',
    'overlay005/ov5_021D57BC.c',
    'overlay005/model_attributes.c',
    'overlay005/field_camera.c',
    'overlay005/ov5_021D5BC0.c',
    'overlay005/texture_resource_manager.c',
    'overlay005/ov5_021D5EB8.c',
    'overlay005/vs_seeker.c',
    'overlay005/field_menu.c',
    'overlay005/script_message.c',
    'overlay005/map_name_popup.c',
    'overlay005/ov5_021DDAE4.c',
    'overlay005/encounter_effect.c',
    'overlay005/ov5_021DF440.c',
    'overlay005/ov5_021DFB54.c',
    'overlay005/ov5_021E1154.c',
    'overlay005/ov5_021E135C.c',
    'overlay005/map_prop.c',
    'overlay005/signpost.c',
    'overlay005/save_info_window.c',
    'overlay005/motion_blur.c',
    'overlay005/field_motion_blur.c',
    'overlay005/encounter_effect_core.c',
    'overlay005/daycare.c',
    'overlay005/land_data.c',
    'overlay005/ov5_021EA714.c',
    'overlay005/ov5_021EA874.c',
    'overlay005/ov5_021EAFA4.c',
    'overlay005/ov5_021EB1A0.c',
    'overlay005/ov5_021ECA70.c',
    'overlay005/ov5_021ECC20.c',
    'overlay005/ov5_021ECE40.c',
    'overlay005/ov5_021EE75C.c',
    'overlay005/size_contest.c',
    'overlay005/loaded_map_buffers.c',
    'overlay005/bdhc.c',
    'overlay005/dynamic_terrain_height.c',
    'overlay005/hblank_system.c',
    'overlay005/ov5_021EF4BC.c',
    'overlay005/area_data.c',
    'overlay005/honey_tree.c',
    'overlay005/ov5_021F007C.c',
    'overlay005/ov5_021F067C.c',
    'overlay005/ov5_021F0824.c',
    'overlay005/fishing.c',
    'overlay005/footprint_type.c',
    'overlay005/ov5_021F0EB0.c',
    'overlay005/ov5_021F101C.c',
    'overlay005/ov5_021F10E8.c',
    'overlay005/ov5_021F134C.c',
    'overlay005/ov5_021F17B8.c',
    'overlay005/ov5_021F1CC8.c',
    'overlay005/berry_patch_effects.c',
    'overlay005/ov5_021F23D0.c',
    'overlay005/ov5_021F25C0.c',
    'overlay005/ov5_021F2850.c',
    'overlay005/ov5_021F2A7C.c',
    'overlay005/ov5_021F2BD0.c',
    'overlay005/ov5_021F2D20.c',
    'overlay005/ov5_021F3284.c',
    'overlay005/ov5_021F348C.c',
    'overlay005/ov5_021F37A8.c',
    'overlay005/ov5_021F3A50.c',
    'overlay005/ov5_021F3D00.c',
    'overlay005/ov5_021F3E74.c',
    'overlay005/ov5_021F4018.c',
    'overlay005/ov5_021F428C.c',
    'overlay005/ov5_021F47B0.c',
    'overlay005/ov5_021F4DAC.c',
    'overlay005/ov5_021F4E08.c',
    'overlay005/ov5_021F5060.c',
    'overlay005/ov5_021F50BC.c',
    'overlay005/ov5_021F5284.c',
    'overlay005/ov5_021F5428.c',
    'overlay005/ov5_021F55CC.c',
    'overlay005/ov5_021F575C.c',
    'overlay005/ov5_021F5894.c',
    'overlay005/ov5_021F5A10.c',
    'overlay005/ov5_021F600C.c',
    'overlay005/ov5_021F61BC.c',
    'overlay005/ov5_021F6454.c',
    'overlay005/scrcmd_move_tutor.c',
    'overlay005/ov5_021F8370.c',
    'overlay005/ov5_021F8560.c',
    'overlay005/ov5_021FAF40.c',
    'overlay005/ov5_021FF6B8.c',
    'overlay006/ov6_0223E140.c',
    'overlay006/wild_encounters.c',
    'overlay006/ov6_022426AC.c',
    'overlay006/great_marsh_binoculars.c',
    'overlay006/ov6_02242AF0.c',
    'overlay006/great_marsh_daily_encounters.c',
    'overlay006/ov6_02243004.c',
    'overlay006/radar_chain_records.c',
    'overlay006/swarm.c',
    'overlay006/hm_cut_in.c',
    'overlay006/roamer_after_battle.c',
    'overlay006/npc_trade.c',
    'overlay006/ov6_02246444.c',
    'overlay006/ov6_022465FC.c',
    'overlay006/ov6_02246A30.c',
    'overlay006/special_dates.c',
    'overlay006/repel_step_update.c',
    'overlay006/healing_machine_animation/pokecenter.c',
    'overlay006/elevator_animation.c',
    'overlay006/pc_animation.c',
    'overlay006/ov6_02247100.c',
    'overlay006/trophy_garden_daily_encounters.c',
    'overlay006/feebas_fishing.c',
    'overlay006/dual_slot_encounters.c',
    'overlay006/ov6_02247830.c',
    'overlay006/ov6_02247A0C.c',
    'overlay006/healing_machine_animation/hall_of_fame.c',
    'overlay006/ov6_02247F5C.c',
    'overlay006/ov6_02248050.c',
    'overlay006/ov6_02248948.c',
    'overlay006/ov6_022489E4.c',
    'overlay007/communication_club.c',
    'overlay007/ov7_0224B4E8.c',
    'overlay007/accessory_shop.c',
    'overlay007/shop_menu.c',
    'overlay008/ov8_02249960.c',
    'overlay009/ov9_02249960.c',
    'overlay010/ov10_0221F800.c',
    'overlay011/move_palettes.c',
    'overlay011/particle_helper.c',
    'battle_anim/is_form_symmetrical.c',
    'battle_anim/battle_anim_system.c',
    'battle_anim/battle_particle_util.c',
    'battle_anim/emitter_callbacks.c',
    'battle_anim/generic_emitter_callback.c',
    'battle_anim/generic_emitter_callback_behavior.c',
    'battle_anim/generic_emitter_callback_camera.c',
    'battle_anim/battle_anim_helpers.c',
    'battle_anim/script_func_tables.c',
    'battle_anim/script_func_examples.c',
    'battle_anim/script_funcs_3.c',
    'battle_anim/script_funcs_0.c',
    'battle_anim/script_funcs_4.c',
    'battle_anim/script_func_mimic.c',
    'battle_anim/script_funcs_1.c',
    'battle_anim/script_funcs_2.c',
    'battle_anim/ov12_022346A4.c',
    'battle_anim/script_funcs_stat_change.c',
    'battle_anim/battle_anim_util.c',
    'battle_anim/ov12_02235E94.c',
    'battle_anim/ov12_02237E54.c',
    'battle_anim/ov12_02237EFC.c',
    'battle_anim/ov12_022380BC.c',
    'overlay013/battle_party.c',
    'overlay013/battle_party_text.c',
    'overlay013/ov13_02224500.c',
    'overlay013/ov13_02225710.c',
    'overlay013/battle_bag.c',
    'overlay013/battle_bag_text.c',
    'overlay013/battle_bag_utils.c',
    'overlay013/battle_bag_sprites.c',
    'overlay013/battle_bag_buttons.c',
    'overlay013/battle_sub_menu_cursor.c',
    'battle/trainer_ai/trainer_ai.c',
    'overlay015/ov15_dummy.c',
    'battle/ov16_0223B140.c',
    'battle/ov16_0223DF00.c',
    'battle/battle_script.c',
    'battle/battle_controller.c',
    'battle/battle_lib.c',
    'battle/battle_io_command.c',
    'battle/battle_display.c',
    'battle/ov16_02264798.c',
    'battle/battle_io.c',
    'battle/healthbar.c',
    'battle/ov16_02268520.c',
    'battle/ov16_0226871C.c',
    'battle/party_gauge.c',
    'battle/ov16_0226DB7C.c',
    'battle/ov16_0226DE44.c',
    'battle/ov16_0226E148.c',
    'overlay017/ov17_0223B140.c',
    'overlay017/ov17_0223CB1C.c',
    'overlay017/ov17_0223DAD0.c',
    'overlay017/ov17_0223F118.c',
    'overlay017/ov17_0223F7E4.c',
    'overlay017/ov17_02241270.c',
    'overlay017/ov17_022413D8.c',
    'overlay017/ov17_02243AC4.c',
    'overlay017/ov17_02243C28.c',
    'overlay017/ov17_02245F14.c',
    'overlay017/ov17_02246ECC.c',
    'overlay017/ov17_022476F8.c',
    'overlay017/ov17_02247A48.c',
    'overlay017/ov17_022492DC.c',
    'overlay017/ov17_0224A0FC.c',
    'overlay017/ov17_0224CFB8.c',
    'overlay017/ov17_0224E930.c',
    'overlay017/ov17_0224F080.c',
    'overlay017/ov17_0224F18C.c',
    'overlay017/ov17_0224F4D4.c',
    'overlay017/ov17_02250744.c',
    'overlay017/ov17_02251D6C.c',
    'overlay017/ov17_02252A70.c',
    'overlay017/ov17_02252AB0.c',
    'overlay017/ov17_02252CEC.c',
    'overlay018/ov18_0221F800.c',
    'applications/pc_boxes/box_app_manager.c',
    'applications/pc_boxes/touch_dial.c',
    'applications/pc_boxes/ov19_021D61B0.c',
    'applications/pc_boxes/ov19_021D79F8.c',
    'applications/pc_boxes/ov19_021D8B54.c',
    'applications/pc_boxes/ov19_021DA270.c',
    'applications/pc_boxes/ov19_021DA814.c',
    'applications/pc_boxes/ov19_021DA92C.c',
    'applications/pc_boxes/ov19_021DB2FC.c',
    'applications/pc_boxes/ov19_021DB8E4.c',
    'applications/pc_boxes/ov19_021DC5F0.c',
    'applications/pc_boxes/ov19_021DCF88.c',
    'applications/pc_boxes/ov19_021DE3E8.c',
    'applications/pc_boxes/ov19_021DEC04.c',
    'applications/pc_boxes/box_menu.c',
    'overlay020/ov20_021D0D80.c',
    'overlay020/ov20_021D2098.c',
    'overlay020/ov20_021D2EA4.c',
    'overlay020/ov20_021D3864.c',
    'overlay020/ov20_021D3A54.c',
    'overlay020/ov20_021D40E8.c',
    'overlay020/ov20_021D4728.c',
    'overlay020/ov20_021D4E38.c',
    'overlay020/ov20_021D5044.c',
    'applications/pokedex/pokedex_main.c',
    'applications/pokedex/footprint.c',
    'applications/pokedex/pokedex_graphics.c',
    'applications/pokedex/pokedex_sort.c',
    'applications/pokedex/pokedex_updater.c',
    'applications/pokedex/ov21_021D423C.c',
    'applications/pokedex/ov21_021D4340.c',
    'applications/pokedex/pokedex_text_manager.c',
    'applications/pokedex/pokedex_panel.c',
    'applications/pokedex/pokedex_field_map.c',
    'applications/pokedex/pokedex_text.c',
    'applications/pokedex/pokedex_enc_data.c',
    'applications/pokedex/ov21_021D5AEC.c',
    'applications/pokedex/ov21_021D76B0.c',
    'applications/pokedex/pokedex_search.c',
    'applications/pokedex/ov21_021D94BC.c',
    'applications/pokedex/ov21_021DC9BC.c',
    'applications/pokedex/ov21_021DDD2C.c',
    'applications/pokedex/ov21_021DE668.c',
    'applications/pokedex/ov21_021DF734.c',
    'applications/pokedex/ov21_021E0C68.c',
    'applications/pokedex/ov21_021E1924.c',
    'applications/pokedex/ov21_021E29DC.c',
    'applications/pokedex/ov21_021E3FFC.c',
    'applications/pokedex/crysub.c',
    'applications/pokedex/pokedex_height_check.c',
    'applications/pokedex/ov21_021E68F4.c',
    'applications/pokedex/ov21_021E737C.c',
    'applications/pokedex/formsub.c',
    'applications/pokedex/ov21_021E8D48.c',
    'overlay022/ov22_02254DE0.c',
    'overlay022/ov22_02255094.c',
    'overlay022/ov22_02255D44.c',
    'overlay022/ov22_022578F4.c',
    'overlay022/ov22_02257F50.c',
    'overlay022/ov22_022588F0.c',
    'overlay022/ov22_0225894C.c',
    'overlay022/ov22_022589E0.c',
    'overlay022/ov22_02259098.c',
    'overlay022/ov22_02259484.c',
    'overlay022/ov22_02259560.c',
    'overlay022/ov22_022597BC.c',
    'overlay022/ov22_02259C58.c',
    'overlay022/ov22_0225A428.c',
    'overlay022/ov22_0225AF44.c',
    'overlay022/ov22_0225AF8C.c',
    'overlay022/ov22_0225B660.c',
    'overlay023/ov23_0223E140.c',
    'overlay023/underground_spheres.c',
    'overlay023/ov23_02241F74.c',
    'overlay023/underground_traps.c',
    'overlay023/underground_item_list_menu.c',
    'overlay023/ov23_02248F1C.c',
    'overlay023/ov23_02249918.c',
    'overlay023/ov23_022499E4.c',
    'overlay023/ov23_0224A1D0.c',
    'overlay023/ov23_0224B05C.c',
    'overlay023/underground_player_talk.c',
    'overlay023/underground_menu.c',
    'overlay023/underground_pc.c',
    'overlay023/ov23_022521F0.c',
    'overlay023/ov23_02253598.c',
    'overlay023/underground_text_printer.c',
    'overlay023/ov23_0225426C.c',
    'overlay023/ov23_0225429C.c',
    'overlay023/ov23_022542CC.c',
    'overlay023/ov23_02254A14.c',
    'applications/poketch/unavailable/graphics.c',
    'applications/poketch/poketch_system.c',
    'applications/poketch/poketch_graphics.c',
    'applications/poketch/poketch_task.c',
    'applications/poketch/poketch_animation.c',
    'applications/poketch/poketch_button.c',
    'applications/poketch/poketch_map.c',
    'applications/poketch/digital_watch/main.c',
    'applications/poketch/digital_watch/graphics.c',
    'applications/poketch/stopwatch/main.c',
    'applications/poketch/stopwatch/graphics.c',
    'applications/poketch/calculator/main.c',
    'applications/poketch/calculator/graphics.c',
    'applications/poketch/calculator/value.c',
    'applications/poketch/memo_pad/main.c',
    'applications/poketch/memo_pad/graphics.c',
    'applications/poketch/analog_watch/main.c',
    'applications/poketch/analog_watch/graphics.c',
    'applications/poketch/dot_artist/main.c',
    'applications/poketch/dot_artist/graphics.c',
    'applications/poketch/party_status/main.c',
    'applications/poketch/party_status/graphics.c',
    'applications/poketch/friendship_checker/main.c',
    'applications/poketch/friendship_checker/graphics.c',
    'applications/poketch/dowsing_machine/main.c',
    'applications/poketch/dowsing_machine/graphics.c',
    'applications/poketch/counter/main.c',
    'applications/poketch/counter/graphics.c',
    'applications/poketch/pedometer/main.c',
    'applications/poketch/pedometer/graphics.c',
    'applications/poketch/backlight_toggle/main.c',
    'applications/poketch/backlight_toggle/graphics.c',
    'applications/poketch/unused/1/main.c',
    'applications/poketch/unused/1/graphics.c',
    'applications/poketch/unused/2/main.c',
    'applications/poketch/unused/2/graphics.c',
    'applications/poketch/daycare_checker/main.c',
    'applications/poketch/daycare_checker/graphics.c',
    'applications/poketch/roulette/main.c',
    'applications/poketch/roulette/graphics.c',
    'applications/poketch/coin_toss/main.c',
    'applications/poketch/coin_toss/graphics.c',
    'applications/poketch/move_tester/main.c',
    'applications/poketch/move_tester/graphics.c',
    'applications/poketch/matchup_checker/main.c',
    'applications/poketch/matchup_checker/graphics.c',
    'applications/poketch/alarm_clock/main.c',
    'applications/poketch/alarm_clock/graphics.c',
    'applications/poketch/kitchen_timer/main.c',
    'applications/poketch/kitchen_timer/graphics.c',
    'applications/poketch/marking_map/main.c',
    'applications/poketch/marking_map/graphics.c',
    'applications/poketch/berry_searcher/main.c',
    'applications/poketch/berry_searcher/graphics.c',
    'applications/poketch/color_changer/main.c',
    'applications/poketch/color_changer/graphics.c',
    'applications/poketch/calendar/main.c',
    'applications/poketch/calendar/graphics.c',
    'applications/poketch/unused/3/main.c',
    'applications/poketch/unused/3/graphics.c',
    'applications/poketch/link_searcher/main.c',
    'applications/poketch/link_searcher/graphics.c',
    'applications/poketch/trainer_counter/main.c',
    'applications/poketch/trainer_counter/graphics.c',
    'applications/poketch/pokemon_history/main.c',
    'applications/poketch/pokemon_history/graphics.c',
    'applications/poketch/unused/4/main.c',
    'applications/poketch/unused/4/graphics.c',
    'overlay056/ov56_022561C0.c',
    'game_start.c',
    'overlay058/ov58_021D0D80.c',
    'overlay059/ov59_021D0D80.c',
    'overlay059/ov59_021D2A2C.c',
    'overlay059/ov59_021D2B44.c',
    'overlay059/ov59_021D2F88.c',
    'overlay060/ov60_0221F800.c',
    'overlay060/http.c',
    'overlay061/ov61_0222AE60.c',
    'overlay061/ov61_0222B008.c',
    'overlay061/ov61_0222BC4C.c',
    'overlay061/ov61_0222BF44.c',
    'overlay062/ov62_0222F2C0.c',
    'overlay062/ov62_022300D8.c',
    'overlay062/ov62_02231690.c',
    'overlay062/ov62_02234A10.c',
    'overlay062/ov62_02235278.c',
    'overlay062/ov62_02235E64.c',
    'overlay062/ov62_02236CBC.c',
    'overlay062/ov62_02237D24.c',
    'overlay062/ov62_02239D60.c',
    'overlay062/ov62_0223CAEC.c',
    'overlay062/ov62_0223DFA8.c',
    'overlay062/ov62_0224112C.c',
    'overlay062/ov62_02241204.c',
    'overlay062/ov62_02246B00.c',
    'overlay062/ov62_02247D74.c',
    'overlay062/ov62_02248408.c',
    'overlay063/ov63_0222AE60.c',
    'overlay063/ov63_0222BCE8.c',
    'overlay063/ov63_0222BE18.c',
    'overlay063/ov63_0222CA88.c',
    'overlay063/ov63_0222CCE4.c',
    'overlay063/ov63_0222D160.c',
    'overlay063/ov63_0222D1C0.c',
    'overlay063/ov63_0222D77C.c',
    'overlay064/ov64_0222DCE0.c',
    'overlay065/ov65_0222DCE0.c',
    'overlay065/ov65_02235060.c',
    'overlay065/ov65_02236474.c',
    'overlay065/ov65_0223648C.c',
    'overlay066/ov66_0222DCE0.c',
    'overlay066/ov66_0222DDF0.c',
    'overlay066/ov66_02230C44.c',
    'overlay066/ov66_02231428.c',
    'overlay066/ov66_0223177C.c',
    'overlay066/ov66_022324F0.c',
    'overlay066/ov66_022343A8.c',
    'overlay066/ov66_02234EA8.c',
    'overlay067/ov67_0225C700.c',
    'overlay068/ov68_0225C700.c',
    'overlay069/ov69_0225C700.c',
    'overlay070/ov70_0225C700.c',
    'overlay070/ov70_0225C858.c',
    'overlay070/ov70_0225C9B4.c',
    'overlay070/ov70_0225D9A4.c',
    'overlay070/ov70_02260A70.c',
    'overlay070/ov70_02260B44.c',
    'overlay070/ov70_02261E10.c',
    'overlay070/ov70_02262DA8.c',
    'overlay070/ov70_022630A4.c',
    'overlay070/ov70_02265F38.c',
    'overlay070/ov70_02266E9C.c',
    'overlay070/ov70_02269190.c',
    'overlay070/ov70_0226C338.c',
    'overlay070/ov70_0226C60C.c',
    'overlay070/ov70_0226C8B4.c',
    'overlay070/ov70_0226CC74.c',
    'overlay070/ov70_0226CE54.c',
    'trainer_card_screen/trainer_card_screen.c',
    'trainer_card_screen/trainer_card_display_text.c',
    'trainer_card_screen/trainer_card_sprites.c',
    'trainer_card_screen/trainer_card_badge_chimes.c',
    'overlay072/ov72_0223D7A0.c',
    'applications/rowan_intro/rowan_intro_app.c',
    'applications/rowan_intro/tv_app.c',
    'applications/options_menu.c',
    'overlay075/ov75_021D0D80.c',
    'overlay076/ov76_0223B140.c',
    'overlay076/ov76_0223B870.c',
    'overlay076/ov76_0223D338.c',
    'applications/title_screen.c',
    'game_opening/ov77_021D25B0.c',
    'game_opening/ov77_021D54B0.c',
    'game_opening/ov77_021D6670.c',
    'game_opening/ov77_021D6C70.c',
    'choose_starter/choose_starter_app.c',
    'overlay079/ov79_021D0D80.c',
    'overlay079/ov79_021D183C.c',
    'overlay079/ov79_021D20F4.c',
    'overlay079/ov79_021D2268.c',
    'overlay079/ov79_021D3768.c',
    'applications/town_map/main.c',
    'applications/town_map/graphics.c',
    'applications/town_map/sprites.c',
    'applications/town_map/fly_locations.c',
    'applications/town_map/map_blocks.c',
    'applications/journal_display/journal_controller.c',
    'applications/journal_display/journal_printer.c',
    'overlay082/ov82_0223B140.c',
    'overlay082/ov82_0223B2E0.c',
    'overlay083/ov83_0223B5A0.c',
    'overlay083/ov83_0223C958.c',
    'overlay083/ov83_0223D144.c',
    'overlay083/ov83_0223D150.c',
    'overlay083/ov83_0223D4CC.c',
    'overlay083/ov83_0223D6A8.c',
    'overlay083/ov83_0223F7F4.c',
    'applications/bag/main.c',
    'applications/bag/windows.c',
    'applications/bag/sprites.c',
    'overlay085/ov85_02241440.c',
    'cutscenes/hall_of_fame.c',
    'applications/pc_hall_of_fame/manager.c',
    'applications/pc_hall_of_fame/display.c',
    'overlay088/ov88_0223B140.c',
    'overlay088/ov88_0223E9C4.c',
    'overlay089/ov89_dummy.c',
    'overlay090/ov90_021D0D80.c',
    'applications/move_reminder.c',
    'overlay092/ov92_021D0D80.c',
    'cutscenes/boat_cutscene/canalave_ship.c',
    'cutscenes/boat_cutscene/snowpoint_ship.c',
    'overlay094/networking.c',
    'overlay094/application.c',
    'overlay094/screens/main_menu.c',
    'overlay094/screens/listing.c',
    'overlay094/screens/search_listing.c',
    'overlay094/screens/search.c',
    'overlay094/screens/select_pokemon.c',
    'overlay094/screens/deposit.c',
    'overlay094/screens/network_handler.c',
    'overlay094/ov94_02243EF8.c',
    'overlay094/screens/pokemon_summary.c',
    'overlay094/screens/trade.c',
    'overlay094/screens/wfc_init.c',
    'overlay095/ov95_02246C20.c',
    'overlay095/ov95_022476F0.c',
    'overlay095/ov95_02247B6C.c',
    'overlay095/ov95_02248590.c',
    'overlay095/ov95_02249740.c',
    'overlay095/ov95_02249F90.c',
    'overlay095/ov95_0224A390.c',
    'overlay095/ov95_0224ABC0.c',
    'overlay095/ov95_0224B3D8.c',
    'overlay096/ov96_0223B140.c',
    'overlay096/ov96_0223B6A0.c',
    'overlay096/ov96_0223BCE0.c',
    'main_menu/main_menu.c',
    'main_menu/ov97_0222C174.c',
    'main_menu/ov97_0222D04C.c',
    'main_menu/ov97_0222D2F8.c',
    'main_menu/mystery_gift_app.c',
    'main_menu/wonder_cards_app.c',
    'main_menu/ov97_02232054.c',
    'main_menu/ov97_02232200.c',
    'main_menu/ov97_02232DC8.c',
    'main_menu/ov97_02233408.c',
    'main_menu/ov97_022337FC.c',
    'main_menu/ov97_02233814.c',
    'main_menu/gba_migrator.c',
    'main_menu/ov97_02235D18.c',
    'main_menu/ov97_0223635C.c',
    'main_menu/gba_pokemon.c',
    'main_menu/distribution_cartridge.c',
    'main_menu/main_menu_util.c',
    'main_menu/ov97_02238534.c',
    'main_menu/ov97_02238D74.c',
    'main_menu/gba_convert_string.c',
    'overlay098/ov98_02246C20.c',
    'overlay098/ov98_022471C8.c',
    'overlay098/ov98_022499C8.c',
    'overlay099/ov99_021D0D80.c',
    'overlay099/ov99_021D1A54.c',
    'overlay099/ov99_021D2C08.c',
    'overlay099/ov99_021D2E28.c',
    'overlay099/ov99_021D340C.c',
    'overlay099/ov99_021D3A40.c',
    'overlay099/ov99_021D3C18.c',
    'overlay099/ov99_021D3DE0.c',
    'overlay099/ov99_021D3E78.c',
    'overlay099/ov99_021D4134.c',
    'overlay100/ov100_021D0D80.c',
    'overlay100/ov100_021D13E4.c',
    'overlay100/ov100_021D1C44.c',
    'overlay100/ov100_021D2F0C.c',
    'overlay100/ov100_021D400C.c',
    'overlay100/ov100_021D44C0.c',
    'overlay100/ov100_021D46C8.c',
    'overlay100/ov100_021D4E04.c',
    'overlay101/ov101_021D0D80.c',
    'overlay101/ov101_021D1A28.c',
    'overlay101/ov101_021D59AC.c',
    'overlay101/ov101_021D7E48.c',
    'overlay101/ov101_021D94D8.c',
    'applications/diploma.c',
    'overlay103/ov103_dummy.c',
    'overlay104/ov104_0222DCE0.c',
    'overlay104/ov104_0222E63C.c',
    'overlay104/ov104_0222E930.c',
    'overlay104/ov104_0222EA90.c',
    'overlay104/ov104_0222ECE8.c',
    'overlay104/ov104_0222FBE4.c',
    'overlay104/ov104_02231F74.c',
    'overlay104/ov104_022332B4.c',
    'overlay104/ov104_022339B4.c',
    'overlay104/ov104_02234838.c',
    'overlay104/ov104_02234DB4.c',
    'overlay104/ov104_022358E8.c',
    'overlay104/ov104_022361B4.c',
    'overlay104/ov104_02237378.c',
    'overlay104/ov104_02237DD8.c',
    'overlay104/ov104_02239080.c',
    'overlay104/ov104_02239130.c',
    'overlay104/ov104_022394A4.c',
    'overlay104/ov104_022395F0.c',
    'overlay104/ov104_02239C58.c',
    'overlay104/ov104_0223A0C4.c',
    'overlay104/ov104_0223A7F4.c',
    'overlay104/ov104_0223AF58.c',
    'overlay104/ov104_0223B6F4.c',
    'overlay104/ov104_0223BCBC.c',
    'overlay104/ov104_0223C164.c',
    'overlay104/ov104_0223C2D4.c',
    'overlay104/ov104_0223D5D0.c',
    'overlay104/ov104_0223D768.c',
    'overlay104/ov104_0223D860.c',
    'overlay104/ov104_0223D9E4.c',
    'overlay104/ov104_0223DC7C.c',
    'overlay104/ov104_0223E894.c',
    'overlay105/ov105_02241AE0.c',
    'overlay105/ov105_02245AAC.c',
    'overlay105/ov105_02245CD0.c',
    'overlay105/ov105_02245DC4.c',
    'overlay105/ov105_02245E54.c',
    'overlay105/ov105_02245FB8.c',
    'overlay105/ov105_02246214.c',
    'overlay106/ov106_02241AE0.c',
    'overlay106/ov106_02243310.c',
    'overlay106/ov106_022435FC.c',
    'overlay106/ov106_022436E0.c',
    'overlay107/ov107_02241AE0.c',
    'overlay107/ov107_02245EB0.c',
    'overlay107/ov107_02249604.c',
    'overlay107/ov107_02249B1C.c',
    'overlay107/ov107_02249C98.c',
    'overlay107/ov107_02249D14.c',
    'overlay108/ov108_02241AE0.c',
    'overlay108/ov108_02243030.c',
    'overlay108/ov108_0224351C.c',
    'overlay108/ov108_02243630.c',
    'overlay109/ov109_021D0D80.c',
    'overlay109/ov109_021D3D50.c',
    'overlay110/ov110_021D0D80.c',
    'overlay110/ov110_021D2124.c',
    'overlay111/ov111_021D0D80.c',
    'overlay111/ov111_021D2F80.c',
    'overlay111/ov111_021D33F4.c',
    'overlay111/ov111_021D3548.c',
    'overlay112/ov112_0225C700.c',
    'overlay113/ov113_0225C700.c',
    'overlay113/ov113_0225E368.c',
    'overlay113/ov113_02260620.c',
    'overlay113/ov113_022607D8.c',
    'overlay114/ov114_0225C700.c',
    'overlay114/ov114_02260038.c',
    'overlay114/ov114_02260044.c',
    'overlay115/ov115_02260440.c',
    'overlay115/ov115_02260BBC.c',
    'overlay115/ov115_02260CEC.c',
    'overlay115/ov115_02265A18.c',
    'overlay115/ov115_02265A24.c',
    'overlay116/ov116_02260440.c',
    'overlay116/ov116_022604C4.c',
    'overlay116/ov116_02261870.c',
    'overlay116/ov116_02262A44.c',
    'overlay116/ov116_02262A8C.c',
    'overlay116/ov116_0226432C.c',
    'overlay116/ov116_02266FEC.c',
    'overlay117/ov117_02260440.c',
    'overlay117/ov117_02260668.c',
    'overlay117/ov117_022626B0.c',
    'overlay117/ov117_02263AF0.c',
    'overlay117/ov117_02266498.c',
    'overlay117/ov117_022665FC.c',
    'overlay117/ov117_022666C0.c',
    'overlay118/ov118_021D0D80.c',
    'overlay119/ov119_021D0D80.c',
    'overlay119/ov119_021D191C.c',
    'library_tv/library_tv.c',
    'dw_warp/dw_warp.c',
    'debug.c'
)
