# Native tools
subdir('csv2bin')
subdir('datagen')
subdir('fixrom')
subdir('json2bin')
subdir('msgenc')
subdir('ordergen')
subdir('postconf')
subdir('scripts')
subdir('debug')

# Prebuilt tools
mwrap_exe = find_program('cw/mwrap', native: true)
makebanner_exe = find_program('makebanner', native: true)
makelcf_exe = find_program('makelcf', native: true)
makerom_exe = find_program('makerom', native: true)

# ARM binutils
arm_none_eabi_gcc_exe = find_program('arm-none-eabi-gcc', native: true)
arm_none_eabi_objcopy_exe = find_program('arm-none-eabi-objcopy', native: true)

# Subproject tools
nitrogfx_exe = find_program('nitrogfx', native: true)
nitrorom_exe = find_program('nitrorom', native: true)
narc_exe = find_program('narc', native: true)
SDATTool_py = find_program('SDATTool_py', native: true)
